# PyCon_KR_2025_Tutorial_vLLM

./: 01_local_inference.py  Makefile  README.md  REFERENCES.md  docker-compose.yaml  pyproject.toml
bmt/: guidellm_limited_concurrent_benchmark_20250814_224424.json  vllm_benchmark_20250814_223119.json
etc/: prometheus.yaml
src/: 01_local_inference.py  01_offline_inference_with_transformers.py  02_offline_inference_with_vllm.py  03_online_inference.py  03_v1_models.sh  04_tool_calling_with_openai.py  04_v1_chat_completions.py  05_tool_calling_with_langchain.py  05_v1_chat_completions_without_stream.sh  06_v1_chat_completions_with_stream.sh  07_v1_chat_completions_tool_call.sh  08_v1_chat_completions_tool_calling_with_openai.py  09_v1_chat_completions_tool_calling_with_langchain.py  10_v1_chat_completions_disable_thinking.sh  11_v1_chat_completions_enable_thinking.sh  12_chat_template.py  13_vllm_serve_distributed.sh  14_metrics.sh  15_monitoring.sh  16_vllm_bench.sh  17_guidellm.sh
